fin de sobrecarga de objetos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /LaboratorioCaja/nbproject/private/
 /LaboratorioCaja/build/
 /Encapsulamiento/Encapsulamiento/target/
+/SobrecargaMetodos/nbproject/private/
+/SobrecargaMetodos/build/
