creación del ejercicico final

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /Encapsulamiento/Encapsulamiento/target/
 /SobrecargaMetodos/nbproject/private/
 /SobrecargaMetodos/build/
+/PAlabraFinal/nbproject/private/
+/PalabraFinal/nbproject/private/
+/PalabraFinal/build/
