Cambio del nombre del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /DPO1_U2_EA_RARP/nbproject/private/
 /DPO1_U2_EA_RARP/build/
 /EjercicioPropuestos/nbproject/private/
+/DPO1_U3_A2/nbproject/private/
