--- a/DPO1_U3_A2/nbproject/project.properties
+++ b/DPO1_U3_A2/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/EjercicioPropuestos.jar
+dist.jar=${dist.dir}/DPO1_U3_A2_RARP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/EjercicioPropuestos
+dist.jlink.output=${dist.jlink.dir}/DPO1_U3_A2_RARP
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=EjercicioPropuestos
+jlink.launcher.name=DPO1_U3_A2_RARP
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
