Creacion del proyecto Ventas

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /PalabraFinal/build/
 /Arreglos/nbproject/private/
 /Arreglos/build/
+/DiseñoClases/nbproject/private/
+/Ventas/nbproject/private/
