Creacion del proyecto Excepcion

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Ventas/nbproject/private/
 /Ventas/build/
 /LaboratorioFinal/nbproject/private/
+/Excepciones/nbproject/private/
+/Excepciones/build/
