--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /DPO1_U3_A3_RARP/build/
 /DPO1_U3_EA_RARP/nbproject/private/
 /DPO1_U3_EA_RARP/build/
+/DPO1_U4_A1_RARP/nbproject/private/
+/DPO1_U4_A1_RARP/build/
