Creación de la actividad complementaria

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /DPO1_U4_A2_RARP/build/
 /DPO1_U4_EA_RARP/nbproject/private/
 /DPO1_U4_EA_RARP/build/
+/DPO1_AC_RARP/nbproject/private/
+/DPO1_AC_RARP/build/
