--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /DPO1_U4_EA_RARP/build/
 /DPO1_AC_RARP/nbproject/private/
 /DPO1_AC_RARP/build/
+/DPO2_U1_EA_RARP/nbproject/private/
+/DPO2_U1_EA_RARP/build/
