--- a/EjemploGraficos/nbproject/project.properties
+++ b/EjemploGraficos/nbproject/project.properties
@@ -28,15 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DPO2_U1_EA_RARP.jar
+dist.jar=${dist.dir}/EjemploGraficos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/DPO2_U1_EA_RARP
+dist.jlink.output=${dist.jlink.dir}/EjemploGraficos
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.absolutelayout.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=DPO2_U1_EA_RARP
-main.class=main.AplicacionGrafica
+jlink.launcher.name=EjemploGraficos
+main.class=ejemplograficos.EjemploGraficos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
