Creacion proyecto de interfaz para evidencia de aprendizaje POgit status

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /DPO2_U1_EA_RARP/nbproject/private/
 /DPO2_U1_EA_RARP/build/
 /EjemploGraficos/nbproject/private/
+/DPOII_U1_EA_RARP/nbproject/private/
