Creacion de ejemplo de ventanas

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /EjemploGraficos/nbproject/private/
 /DPOII_U1_EA_RARP/nbproject/private/
 /DPOII_U1_EA_RARP/build/
+/VentanasJava/nbproject/private/
