creación de ventanas y ejemplo2

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /DPOII_U1_EA_RARP/build/
 /VentanasJava/nbproject/private/
 /VentanasJava/build/
+/EjemploGraficos/build/
+/POO2_U1_A2_RARP/nbproject/private/
