--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /HolaMundo/build/
 /IntroduccionJDBC/target/
 /ManejoJDBC/target/
+/Harlingy/nbproject/private/
+/HarlingyDocumentation/nbproject/private/
+/HarlingyDocumentation/build/
