--- a/POO2_U2_A1_RARP/nbproject/project.properties
+++ b/POO2_U2_A1_RARP/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=POO2_U2_A1_RARP
-main.class=
+main.class=interfacesgraficas.Contenedor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
