Creaion de la actividad3

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /POO2_U1_A2_RARP/build/
 /POO2_U2_A1_RARP/nbproject/private/
 /POO2_U2_A1_RARP/build/
+/DPO2_U2_A3_RARP/nbproject/private/
+/DPO2_U2_A3_RARP/build/
