Creación de la actividad 2 del menú

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /DPO2_U2_A3_RARP/build/
 /EjemploGraficos/dist/
 /DPO2_U2_A3_RARP/dist/
+/DPO2_U2_A4_RARP/nbproject/private/
+/DPO2_U2_A4_RARP/build/
+/DPO2_U2_A4_RARP/dist/
