Creación de la ventana de nomina

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@
 /DPO2_U2_A4_RARP/build/
 /DPO2_U2_A4_RARP/dist/
 /DPO2_U2_EA_RARP/nbproject/private/
+/DPO2_U2_EA_RARP/build/
+/DPO2_U2_EA_RARP/dist/
