Uso de la libreira para conectarse a la base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,6 @@
 /DPO2_U2_EA_RARP/build/
 /DPO2_U2_EA_RARP/dist/
 /DPO2_U3_A1_RARP/nbproject/private/
+/DPO2_U3_A1_RARP/build/
+/DPO2_U3_A1_RARP/dist/
+/DPO2_U3_A2_RARP/nbproject/private/
