Creación de la clase que permite la conexion a la base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@
 /DPO2_U3_A1_RARP/build/
 /DPO2_U3_A1_RARP/dist/
 /DPO2_U3_A2_RARP/nbproject/private/
+/DPO2_U3_A2_RARP/build/
+/DPO2_U3_A2_RARP/dist/
