Construcción del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@
 /DPO2_U3_A2_RARP/build/
 /DPO2_U3_A2_RARP/dist/
 /DPO2_U3_EA_RARP/nbproject/private/
+/DPO2_U3_EA_RARP/build/
+/DPO2_U3_EA_RARP/dist/
