--- a/UnADM/universidadPOO2/DP02_ACD_RARP/nbproject/project.properties
+++ b/UnADM/universidadPOO2/DP02_ACD_RARP/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DP02_ACD_RARP
-main.class=
+main.class=main.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
