--- a/UnADM/universidadPOO3/DPO3_U1_A2_RARP/nbproject/project.properties
+++ b/UnADM/universidadPOO3/DPO3_U1_A2_RARP/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Ventas.jar
+dist.jar=${dist.dir}/DPO3_U1_A2_RARP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Ventas
+dist.jlink.output=${dist.jlink.dir}/DPO3_U1_A2_RARP
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Ventas
-main.class=mx.com.gm.ventas.test.VentasTest
+jlink.launcher.name=DPO3_U1_A2_RARP
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
