Creación del menú

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@
 /UnADM/universidadPOO3/DPO3_U1_A2_RARP/JavaApplication34/build/
 /UnADM/universidadPOO2/DP02_ACD_RARP/build/
 /UnADM/universidadPOO3/DPO3_U1_A2_RARP/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U1_A2_RARP/build/
