Creación del proyecto para la evidencia de aprendizaje

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@
 /UnADM/universidadPOO2/DP02_ACD_RARP/build/
 /UnADM/universidadPOO3/DPO3_U1_A2_RARP/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U1_A2_RARP/build/
+/UnADM/universidadPOO3/DPO3_U1_EA_RARP/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U1_EA_RARP/build/
