Comienzo con la creación del proyecto y la base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,6 @@
 /UnADM/universidadPOO3/DPO3_U1_A2_RARP/build/
 /UnADM/universidadPOO3/DPO3_U1_EA_RARP/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U1_EA_RARP/build/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/build/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/dist/
