Cambio de nombre del proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/build/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/dist/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/nbproject/private/
