--- a/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/nbproject/project.properties
+++ b/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/nbproject/project.properties
@@ -28,12 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Estamcia.jar
+dist.jar=${dist.dir}/Estancia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Estamcia
+dist.jlink.output=${dist.jlink.dir}/Estancia
 excludes=
-file.reference.mysql-connector-java-8.0.23.jar=C:\\Users\\ramss\\Documents\\JDBC\\mysql-connector-java-8.0.23.jar
+file.reference.mysql-connector-java-8.0.23.jar=../../../../../JDBC/mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Estamcia
+jlink.launcher.name=Estancia
 main.class=estamcia.Estamcia
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
