Creación de las insersiones y modificación para la creación dela base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/build/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estamcia/dist/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/build/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/dist/
