Modificación del gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/build/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/dist/
+/carpetaUdemy/javaBaseDatos/IntroduccionJDBC/target/
