--- a/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/nbproject/project.properties
+++ b/UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Estancia
+application.vendor=ramssrez
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,15 @@ dist.jar=${dist.dir}/Estancia.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Estancia
+endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=C:\\Users\\ramss\\Downloads\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-8.0.23.jar=../../../../../JDBC/mysql-connector-java-8.0.23.jar
+file.reference.jcalendar-1.4.jar=..\\librerias\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-8.0.23.jar=..\\librerias\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.23.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mysql-connector-java-8.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
