--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/build/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/Estancia/dist/
 /carpetaUdemy/javaBaseDatos/IntroduccionJDBC/target/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP/maids/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/private/
