Test de la clase para conectarse

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@
 /carpetaUdemy/javaBaseDatos/IntroduccionJDBC/target/
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/maids/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/build/
