--- a/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/project.properties
+++ b/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/project.properties
@@ -33,9 +33,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/maids
 excludes=
+file.reference.mysql-connector-java-8.0.23.jar=..\\..\\DPO3_U2_A2_RARP\\librerias\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-8.0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
