--- a/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/project.properties
+++ b/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/maids
 excludes=
+file.reference.jcalendar-1.4.jar=..\\librerias\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.23.jar=..\\..\\DPO3_U2_A2_RARP\\librerias\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
