Asignación de los cambios para los empleados globales

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@
 /UnADM/universidadPOO3/DPO3_U2_A2_RARP/maids/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/build/
+/UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/dist/
