Creación de proyecto para practicas y sentencias mySql

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,5 @@
 /UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/build/
 /UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/dist/
+/pruebaspracticas/practivas/nbproject/private/
+/pruebaspracticas/practivas/build/
