--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,4 @@
 /UnADM/universidadPOO3/DPO3_U2_EA_RARP/maids/dist/
 /pruebaspracticas/practivas/nbproject/private/
 /pruebaspracticas/practivas/build/
+/UnADM/universidadPOO3/DPO3_U3_A2_RARP/nbproject/private/
