--- a/UnADM/universidadPOO3/DPO3_U3_A2_RARP/nbproject/project.properties
+++ b/UnADM/universidadPOO3/DPO3_U3_A2_RARP/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DPO3_U3_A2_RARP
-main.class=practica.Practica
+main.class=practica.Servidor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
