Creación del ejercicio practico para conectase a un servidor

--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@
 /pruebaspracticas/practivas/nbproject/private/
 /pruebaspracticas/practivas/build/
 /UnADM/universidadPOO3/DPO3_U3_A2_RARP/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U3_A2_RARP/build/
