Creación de la interfaz del cliente

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,5 @@
 /pruebaspracticas/practivas/build/
 /UnADM/universidadPOO3/DPO3_U3_A2_RARP/nbproject/private/
 /UnADM/universidadPOO3/DPO3_U3_A2_RARP/build/
+/UnADM/universidadPOO3/La Hamburguesa/nbproject/private/
+/UnADM/universidadPOO3/La Hamburguesa/build/
