Cambio de nombre de la carpeta

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@
 /UnADM/universidadPOO3/DPO3_U3_A2_RARP/build/
 /UnADM/universidadPOO3/La Hamburguesa/nbproject/private/
 /UnADM/universidadPOO3/La Hamburguesa/build/
+/UnADM/universidadPOO3/DPO3_U3_EA_RARP/build/
+/UnADM/universidadPOO3/DPO3_U3_EA_RARP/nbproject/private/
