Modificación para la correcta ejecución del programa

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,10 @@
 /UnADM/universidadPOO3/La Hamburguesa/build/
 /UnADM/universidadPOO3/DPO3_U3_EA_RARP/build/
 /UnADM/universidadPOO3/DPO3_U3_EA_RARP/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP - copia/Estancia/build/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP - copia/Estancia/dist/
+/UnADM/universidadPOO3/DPO3_U2_A2_RARP - copia/Estancia/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/build/
+/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/dist/
+/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/nbproject/private/
+/UnADM/universidadPOO3/DPO3_U3_EA_RARP/dist/
