Integración de librerí para generar un documento

--- a/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/nbproject/project.properties
+++ b/UnADM/universidadPOO3/DPO3_U3_AC_RARP/Estancia/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Estancia
 endorsed.classpath=
 excludes=
+file.reference.itext5-itextpdf-5.5.12.jar=..\\librerias\\itext5-itextpdf-5.5.12.jar
 file.reference.jcalendar-1.4.jar=..\\librerias\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.23.jar=..\\librerias\\mysql-connector-java-8.0.23.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.itext5-itextpdf-5.5.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
