Creación de la clase para el servlet y el formulario del html

--- a/carpetaUdemy/Servlets/JavaWeb/pom.xml
+++ b/carpetaUdemy/Servlets/JavaWeb/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>JavaWeb</artifactId>
     <version>1.0</version>
     <packaging>war</packaging>
-    <name>JavaWeb-1.0</name>
+    <name>JavaWeb</name>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
