--- a/Agile/maven-consol/pom.xml
+++ b/Agile/maven-consol/pom.xml
@@ -4,11 +4,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.ramssrez</groupId>
-  <artifactId>maven-dos</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <groupId>com.ramssrez</groupId>
+  <artifactId>maven-consol</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-  <name>maven-dos</name>
+  <name>maven-consol</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
