--- a/Agile/SpringAnnotations/pom.xml
+++ b/Agile/SpringAnnotations/pom.xml
@@ -13,4 +13,11 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.18</version>
+        </dependency>
+    </dependencies>
 </project>
